--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<section id="content">
+<section id="content" style="margin-top: 30px">
   <div class="container">
     <router-outlet></router-outlet>
   </div>
