--- a/src/app/kontak/kontak.component.html
+++ b/src/app/kontak/kontak.component.html
@@ -1,12 +1,8 @@
-<h2 class="text-center text-uppercase text-secondary mb-0">Tentang</h2>
+<h2 class="text-center text-uppercase text-secondary mb-0">Kontak</h2>
 <hr class="star-dark mb-5">
 <div class="row">
-  <div class="col-lg-4 ml-auto">
-    <p class="lead">SipiTC merupakan sistem informasi peminjaman inventaris yang ada di laboratorium Departemen
-      Informatika ITS</p>
-  </div>
-  <div class="col-lg-4 mr-auto">
-    <p class="lead">Tujuan dari SipiTC yaitu mempermudah alur peminjaman inventaris baik bagi peminjam dan admin
-      laboratorium</p>
+  <div class="col-lg-12 ml-auto text-center">
+    <p class="lead">Departemen Informatika <br> Fakultas Teknologi Informasi dan Komunikasi <br> Institut Teknologi
+      Sepuluh Nopember</p>
   </div>
 </div>
