--- a/src/app/tentang/tentang.component.html
+++ b/src/app/tentang/tentang.component.html
@@ -1,3 +1,12 @@
-<p>
-  tentang works!
-</p>
+<h2 class="text-center text-uppercase text-secondary mb-0">Tentang</h2>
+<hr class="star-dark mb-5">
+<div class="row">
+  <div class="col-lg-4 ml-auto text-justify">
+    <p class="lead">SipiTC merupakan sistem informasi peminjaman inventaris yang ada di laboratorium Departemen
+      Informatika ITS</p>
+  </div>
+  <div class="col-lg-4 mr-auto text-justify">
+    <p class="lead">Tujuan dari SipiTC yaitu mempermudah alur peminjaman inventaris baik bagi peminjam dan admin
+      laboratorium</p>
+  </div>
+</div>
