--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,51 +1,53 @@
-<footer class="footer text-center">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-4 mb-5 mb-lg-0">
-        <h4 class="text-uppercase mb-4">Location</h4>
-        <p class="lead mb-0">Departemen Informatika <br> Fakultas Teknologi Informasi dan Komunikasi <br> Institut
-          Teknologi Sepuluh Nopember</p>
-      </div>
-      <div class="col-md-4 mb-5 mb-lg-0">
-        <h4 class="text-uppercase mb-4">Around the Web</h4>
-        <ul class="list-inline mb-0">
-          <li class="list-inline-item">
-            <a class="btn btn-outline-light btn-social text-center rounded-circle" href="#">
-              <i class="fa fa-fw fa-facebook"></i>
-            </a>
-          </li>
-          <li class="list-inline-item">
-            <a class="btn btn-outline-light btn-social text-center rounded-circle" href="#">
-              <i class="fa fa-fw fa-google-plus"></i>
-            </a>
-          </li>
-          <li class="list-inline-item">
-            <a class="btn btn-outline-light btn-social text-center rounded-circle" href="#">
-              <i class="fa fa-fw fa-twitter"></i>
-            </a>
-          </li>
-          <li class="list-inline-item">
-            <a class="btn btn-outline-light btn-social text-center rounded-circle" href="#">
-              <i class="fa fa-fw fa-linkedin"></i>
-            </a>
-          </li>
-          <li class="list-inline-item">
-            <a class="btn btn-outline-light btn-social text-center rounded-circle" href="#">
-              <i class="fa fa-fw fa-dribbble"></i>
-            </a>
-          </li>
-        </ul>
-      </div>
-      <div class="col-md-4">
-        <h4 class="text-uppercase mb-4">Tentang SipiTC</h4>
-        <p class="lead mb-0">SipiTC dikembangkan untuk mempermudah peminjaman inventaris laboratorium TC</p>
+<div>
+  <footer class="footer text-center">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-4 mb-5 mb-lg-0">
+          <h4 class="text-uppercase mb-4">Location</h4>
+          <p class="lead mb-0">Departemen Informatika <br> Fakultas Teknologi Informasi dan Komunikasi <br> Institut
+            Teknologi Sepuluh Nopember</p>
+        </div>
+        <div class="col-md-4 mb-5 mb-lg-0">
+          <h4 class="text-uppercase mb-4">Around the Web</h4>
+          <ul class="list-inline mb-0">
+            <li class="list-inline-item">
+              <a class="btn btn-outline-light btn-social text-center rounded-circle" href="#">
+                <i class="fa fa-fw fa-facebook"></i>
+              </a>
+            </li>
+            <li class="list-inline-item">
+              <a class="btn btn-outline-light btn-social text-center rounded-circle" href="#">
+                <i class="fa fa-fw fa-google-plus"></i>
+              </a>
+            </li>
+            <li class="list-inline-item">
+              <a class="btn btn-outline-light btn-social text-center rounded-circle" href="#">
+                <i class="fa fa-fw fa-twitter"></i>
+              </a>
+            </li>
+            <li class="list-inline-item">
+              <a class="btn btn-outline-light btn-social text-center rounded-circle" href="#">
+                <i class="fa fa-fw fa-linkedin"></i>
+              </a>
+            </li>
+            <li class="list-inline-item">
+              <a class="btn btn-outline-light btn-social text-center rounded-circle" href="#">
+                <i class="fa fa-fw fa-dribbble"></i>
+              </a>
+            </li>
+          </ul>
+        </div>
+        <div class="col-md-4">
+          <h4 class="text-uppercase mb-4">Tentang SipiTC</h4>
+          <p class="lead mb-0">SipiTC dikembangkan untuk mempermudah peminjaman inventaris laboratorium TC</p>
+        </div>
       </div>
     </div>
-  </div>
-</footer>
+  </footer>
 
-<div class="copyright py-4 text-center text-white">
-  <div class="container">
-    <small>Copyright SipiTC 2018</small>
+  <div class="copyright py-4 text-center text-white">
+    <div class="container">
+      <small>Copyright SipiTC 2018</small>
+    </div>
   </div>
 </div>
