--- a/src/app/header/header-login/header-login.component.html
+++ b/src/app/header/header-login/header-login.component.html
@@ -10,19 +10,10 @@
     <div class="collapse navbar-collapse" id="navbarResponsive">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item mx-0 mx-lg-1">
-          <a class="nav-link py-3 px-0 px-lg-3 rounded " href="inventaris">Inventaris</a>
+          <a class="nav-link py-3 px-0 px-lg-3 rounded " href="login">Login</a>
         </li>
         <li class="nav-item mx-0 mx-lg-1">
-          <a class="nav-link py-3 px-0 px-lg-3 rounded" href="peminjaman">Form Peminjaman</a>
-        </li>
-        <li class="nav-item mx-0 mx-lg-1">
-          <a class="nav-link py-3 px-0 px-lg-3 rounded " href="tentang">Tentang</a>
-        </li>
-        <li class="nav-item mx-0 mx-lg-1">
-          <a class="nav-link py-3 px-0 px-lg-3 rounded " href="kontak">Kontak</a>
-        </li>
-        <li class="nav-item mx-0 mx-lg-1">
-          <a class="nav-link py-3 px-0 px-lg-3 rounded " href="logout">Logout</a>
+          <a class="nav-link py-3 px-0 px-lg-3 rounded" href="register">Register</a>
         </li>
       </ul>
     </div>
