--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,3 +1,49 @@
-<p>
-  login works!
-</p>
+<header class="text-center">
+  <div class="box box-primary">
+    <!-- /.box-header -->
+    <!-- form start -->
+    <div class="card-body">
+      <form>
+        <div class="form-group row">
+          <label for="email" class="col-sm-4 col-form-label text-md-right">E-Mail Address</label>
+
+          <div class="col-md-6">
+            <input id="email" type="email" class="form-control" name="email" required autofocus>
+          </div>
+        </div>
+
+        <div class="form-group row">
+          <label for="password" class="col-md-4 col-form-label text-md-right">Password</label>
+
+          <div class="col-md-6">
+            <input id="password" type="password" class="form-control" name="password" required>
+          </div>
+        </div>
+
+        <div class="form-group row">
+          <div class="col-md-6 offset-md-6">
+            <div class="checkbox">
+              <label>
+                <input type="checkbox" name="remember">
+                Remember Me
+              </label>
+            </div>
+          </div>
+        </div>
+
+        <div class="form-group row mb-0">
+          <div class="col-md-12">
+
+            <!--                                <a class="btn btn-link" href="{{ route('password.request') }}">
+                                                {{ __('Forgot Your Password?') }}
+                                            </a>
+            -->
+            <button type="submit" class="btn btn-success btn-md">
+              Login
+            </button>
+          </div>
+        </div>
+      </form>
+    </div>
+  </div>
+</header>
