--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,1 +1,2 @@
-<app-header-login></app-header-login>
+<app-header-login *ngIf="!isLoggedIn()"></app-header-login>
+<app-header-menu *ngIf="isLoggedIn()"></app-header-menu>
