--- a/src/app/header/header-menu/header-menu.component.html
+++ b/src/app/header/header-menu/header-menu.component.html
@@ -19,7 +19,7 @@
           <a class="nav-link py-3 px-0 px-lg-3 rounded" href="kontak">Kontak</a>
         </li>
         <li class="nav-item mx-0 mx-lg-1">
-          <a class="nav-link py-3 px-0 px-lg-3 rounded" href="login">Logout</a>
+          <a class="nav-link py-3 px-0 px-lg-3 rounded" href="logout">Logout</a>
         </li>
       </ul>
     </div>
