--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,21 +1,32 @@
 <div class="box box-primary">
   <div class="card-body">
-    <form>
+    <form (submit)="attemptRegister($event.target[0].value, $event.target[1].value,
+                                    $event.target[2].value, $event.target[3].value,
+                                    $event.target[4].value, $event.target[5].value)">
+      <div class="form-group row">
+        <label for="nrp" class="col-md-4 col-form-label text-md-right">NRP</label>
+        <div class="col-md-6">
+          <input id="nrp" type="text" class="form-control" required autofocus>
+        </div>
+      </div>
       <div class="form-group row">
         <label for="name" class="col-md-4 col-form-label text-md-right">Name</label>
         <div class="col-md-6">
           <input id="name" type="text" class="form-control" name="name" required autofocus>
         </div>
       </div>
-
       <div class="form-group row">
         <label for="email" class="col-md-4 col-form-label text-md-right">E-Mail Address</label>
-
         <div class="col-md-6">
           <input id="email" type="email" class="form-control" name="email" required>
         </div>
       </div>
-
+      <div class="form-group row">
+        <label for="phone" class="col-md-4 col-form-label text-md-right">Phone Number</label>
+        <div class="col-md-6">
+          <input id="phone" type="text" class="form-control" name="email" required>
+        </div>
+      </div>
       <div class="form-group row">
         <label for="password" class="col-md-4 col-form-label text-md-right">Password</label>
 
@@ -23,20 +34,15 @@
           <input id="password" type="password" class="form-control" name="password" required>
         </div>
       </div>
-
       <div class="form-group row">
         <label for="password-confirm" class="col-md-4 col-form-label text-md-right">Confirm Password</label>
-
         <div class="col-md-6">
           <input id="password-confirm" type="password" class="form-control" name="password_confirmation" required>
         </div>
       </div>
-
       <div class="form-group row mb-0">
         <div class="col-md-6 offset-md-4">
-          <button type="submit" class="btn btn-primary">
-            Register
-          </button>
+          <button type="submit" class="btn btn-primary">Register</button>
         </div>
       </div>
     </form>
