--- a/src/app/header/header-menu/header-menu.component.html
+++ b/src/app/header/header-menu/header-menu.component.html
@@ -10,7 +10,7 @@
     <div class="collapse navbar-collapse" id="navbarResponsive">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item mx-0 mx-lg-1">
-          <a class="nav-link py-3 px-0 px-lg-3 rounded" href="/">Inventaris</a>
+          <a class="nav-link py-3 px-0 px-lg-3 rounded" href="inventaris">Inventaris</a>
         </li>
         <li class="nav-item mx-0 mx-lg-1">
           <a class="nav-link py-3 px-0 px-lg-3 rounded" href="tentang">Tentang</a>
